--- a/res/styles.less
+++ b/res/styles.less
@@ -1,3 +1,7 @@
+@import "~rsuite/lib/styles/themes/default/index.less";
+
+@base-color: #880061;
+
 input{
   margin-top: 5px;
   margin-bottom: 5px;
@@ -18,3 +22,5 @@ input{
     }
   }
 }
+
+
